--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "shendongsheng <shendongsheng@propersoft.cn>"
   ],
   "description": "angularjs wrapper of propersoft cordova plugin",
-  "main": "proper-ng-cordova.js",
+  "main": "./proper-ng-cordova.js",
+  "version":"1.0.0"
   "keywords": [
     "proper",
     "ng",
